--- a/index.html
+++ b/index.html
@@ -351,7 +351,8 @@
         <tr class="foot">
           <td></td>
           <td colspan="7">
-            Timetable generated with FET 6.3.0 on 2/3/23 5:10 PM
+            Timetable generated with FET 6.3.0 on 2/3/23 5:10 PM<br/>
+            Designed by Aruna Priyankara
           </td>
         </tr>
       </tbody>
