--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   </head>
 
   <body id="top">
-    <table id="table_61" border="1px" class="container glass">
+    <table id="table_59" border="1" class="container glass">
       <caption>
-        Sri Lanka Institute of Information Technology
+        SLIIT SE WE Timetable
       </caption>
       <thead>
         <tr>
@@ -36,18 +36,25 @@
           <td>-x-</td>
           <td>-x-</td>
           <td>-x-</td>
-          <td>---</td>
-          <td>---</td>
-        </tr>
-        <tr>
-          <th class="yAxis">09:30</th>
-          <td>-x-</td>
-          <td>-x-</td>
-          <td>-x-</td>
-          <td>-x-</td>
-          <td>-x-</td>
-          <td rowspan="3">
-            SE3020 - DS Lecture, Tutorial<br />F502 IPU Hall<br />
+          <td>
+            <table class="detailed">
+              <tr>
+                <td class="detailed">Y3.S2.WE.SE.0101</td>
+                <td class="detailed">Y3.S2.WE.SE.0102</td>
+              </tr>
+              <tr>
+                <td class="detailed">SE3040 - AF Practical BYOD VL</td>
+                <td class="detailed">SE3040 - AF Practical BYOD VL</td>
+              </tr>
+              <tr>
+                <td class="detailed"></td>
+                <td class="detailed"></td>
+              </tr>
+              <tr>
+                <td class="detailed">G1104</td>
+                <td class="detailed">G606</td>
+              </tr>
+            </table>
           </td>
           <td>
             <table class="detailed">
@@ -57,7 +64,53 @@
               <tr>
                 <td class="detailed">SE3020 - DS Practical BYOD VL</td>
               </tr>
-             
+              <tr>
+                <td class="detailed"></td>
+              </tr>
+              <tr>
+                <td class="detailed">G604</td>
+              </tr>
+            </table>
+          </td>
+        </tr>
+        <tr>
+          <th class="yAxis">09:30</th>
+          <td>-x-</td>
+          <td>-x-</td>
+          <td>-x-</td>
+          <td>-x-</td>
+          <td>-x-</td>
+          <td>
+            <table class="detailed">
+              <tr>
+                <td class="detailed">Y3.S2.WE.SE.0101</td>
+                <td class="detailed">Y3.S2.WE.SE.0102</td>
+              </tr>
+              <tr>
+                <td class="detailed">SE3040 - AF Practical BYOD VL</td>
+                <td class="detailed">SE3040 - AF Practical BYOD VL</td>
+              </tr>
+              <tr>
+                <td class="detailed"></td>
+                <td class="detailed"></td>
+              </tr>
+              <tr>
+                <td class="detailed">G1104</td>
+                <td class="detailed">G606</td>
+              </tr>
+            </table>
+          </td>
+          <td>
+            <table class="detailed">
+              <tr>
+                <td class="detailed">Y3.S2.WE.SE.0102</td>
+              </tr>
+              <tr>
+                <td class="detailed">SE3020 - DS Practical BYOD VL</td>
+              </tr>
+              <tr>
+                <td class="detailed"></td>
+              </tr>
               <tr>
                 <td class="detailed">G604</td>
               </tr>
@@ -71,18 +124,13 @@
           <td>-x-</td>
           <td>-x-</td>
           <td>-x-</td>
-          <!-- span -->
-          <td>
-            <table class="detailed">
-              <tr>
-                <td class="detailed">Y3.S2.WE.SE.0102</td>
-              </tr>
-              <tr>
-                <td class="detailed">SE3020 - DS Practical BYOD VL</td>
-              <tr>
-                <td class="detailed">G604</td>
-              </tr>
-            </table>
+          <td rowspan="3">
+            SE3020 - DS Lecture, Tutorial<br />Ms. D.Hansi Achela de Silva, Dr.
+            Dharshana Kasthurirathne<br />F502 IPU Hall<br />
+          </td>
+          <td rowspan="2">
+            Y3.S2.WE.SE.0101, Y3.S2.WE.SE.0102<br />SE3030 - SA Practical BYOD
+            VL<br />G1101<br />
           </td>
         </tr>
         <tr>
@@ -93,7 +141,7 @@
           <td>-x-</td>
           <td>-x-</td>
           <!-- span -->
-          <td>---</td>
+          <!-- span -->
         </tr>
         <tr>
           <th class="yAxis">12:30</th>
@@ -102,7 +150,7 @@
           <td>-x-</td>
           <td>-x-</td>
           <td>-x-</td>
-          <td>---</td>
+          <!-- span -->
           <td>---</td>
         </tr>
         <tr>
@@ -130,6 +178,8 @@
               <tr>
                 <td class="detailed">SE3010 - SEP&amp;QM Practical BYOD VL</td>
               </tr>
+              <tr>
+                <td class="detailed">Mr. Samitha Peruma Vidhanaarchchi</td>
               </tr>
               <tr>
                 <td class="detailed">G606</td>
@@ -155,6 +205,8 @@
               <tr>
                 <td class="detailed">SE3010 - SEP&amp;QM Practical BYOD VL</td>
               </tr>
+              <tr>
+                <td class="detailed">Mr. Samitha Peruma Vidhanaarchchi</td>
               </tr>
               <tr>
                 <td class="detailed">G606</td>
@@ -171,7 +223,8 @@
           <td>-x-</td>
           <td>-x-</td>
           <td rowspan="3">
-            SE3040 - AF Lecture, Tutorial<br />F1306<br />
+            SE3040 - AF Lecture, Tutorial<br />Mr. Thusithanjana
+            Thilakarathne<br />F1306<br />
           </td>
           <!-- span -->
         </tr>
@@ -194,75 +247,40 @@
             <table class="detailed">
               <tr>
                 <td class="detailed">Y3.S2.WE.SE.0101</td>
-                <td class="detailed">Y3.S2.WE.SE.0102</td>
               </tr>
               <tr>
                 <td class="detailed">SE3020 - DS Practical BYOD VL</td>
-                <td class="detailed">SE3030 - SA Practical BYOD VL</td>
               </tr>
               <tr>
-                <td class="detailed"></td>
                 <td class="detailed"></td>
               </tr>
               <tr>
                 <td class="detailed">G605</td>
-                <td class="detailed">G1103</td>
               </tr>
             </table>
           </td>
           <td>
             <table class="detailed">
               <tr>
-                <td class="detailed">Y3.S2.WE.SE.0101</td>
                 <td class="detailed">Y3.S2.WE.SE.0102</td>
               </tr>
               <tr>
-                <td class="detailed">SE3030 - SA Practical BYOD VL</td>
                 <td class="detailed">SE3010 - SEP&amp;QM Practical BYOD VL</td>
               </tr>
               <tr>
-                <td class="detailed"></td>
-              </tr>
-              <tr>
-                <td class="detailed">G606</td>
-                <td class="detailed">G1105</td>
-              </tr>
-            </table>
-          </td>
-          <td>
-            <table class="detailed">
-              <tr>
-                <td class="detailed">Y3.S2.WE.SE.0102</td>
-              </tr>
-              <tr>
-                <td class="detailed">SE3040 - AF Practical BYOD VL</td>
-              </tr>
-              <tr>
-              </tr>
-              <tr>
-                <td class="detailed">G1103</td>
-              </tr>
-            </table>
-          </td>
-          <td>
-            <table class="detailed">
-              <tr>
-                <td class="detailed">Y3.S2.WE.SE.0101</td>
-              </tr>
-              <tr>
-                <td class="detailed">SE3040 - AF Practical BYOD VL</td>
-              </tr>
-              <tr>
+                <td class="detailed">Mr. Samitha Peruma Vidhanaarchchi</td>
               </tr>
               <tr>
                 <td class="detailed">G1105</td>
               </tr>
             </table>
           </td>
+          <td>---</td>
+          <td>---</td>
           <td rowspan="2">
             Y3.S2.WE.IT.01, Y3.S2.WE.IT.02, Y3.S2.WE.DS.03, Y3.S2.WE.CS.01,
             Y3.S2.WE.ISE.02, Y3.S2.WE.SE.01<br />IT3050 - ESDSeminar Weekday
-            Lectures<br />Main
+            Lectures<br />Mr. Nelum Chathuranga Amarasena<br />Main
             Auditorium<br />
           </td>
           <!-- span -->
@@ -274,85 +292,53 @@
             <table class="detailed">
               <tr>
                 <td class="detailed">Y3.S2.WE.SE.0101</td>
-                <td class="detailed">Y3.S2.WE.SE.0102</td>
               </tr>
               <tr>
                 <td class="detailed">SE3020 - DS Practical BYOD VL</td>
-                <td class="detailed">SE3030 - SA Practical BYOD VL</td>
               </tr>
               <tr>
-                <td class="detailed"></td>
                 <td class="detailed"></td>
               </tr>
               <tr>
                 <td class="detailed">G605</td>
-                <td class="detailed">G1103</td>
               </tr>
             </table>
           </td>
           <td>
             <table class="detailed">
               <tr>
-                <td class="detailed">Y3.S2.WE.SE.0101</td>
                 <td class="detailed">Y3.S2.WE.SE.0102</td>
               </tr>
               <tr>
-                <td class="detailed">SE3030 - SA Practical BYOD VL</td>
                 <td class="detailed">SE3010 - SEP&amp;QM Practical BYOD VL</td>
               </tr>
               <tr>
-                <td class="detailed"></td>
-                <td class="detailed"></td>
-              </tr>
-              <tr>
-                <td class="detailed">G606</td>
-                <td class="detailed">G1105</td>
-              </tr>
-            </table>
-          </td>
-          <td>
-            <table class="detailed">
-              <tr>
-                <td class="detailed">Y3.S2.WE.SE.0102</td>
-              </tr>
-              <tr>
-                <td class="detailed">SE3040 - AF Practical BYOD VL</td>
-              </tr>
-              <tr>
-                <td class="detailed"></td>
-              </tr>
-              <tr>
-                <td class="detailed">G1103</td>
-              </tr>
-            </table>
-          </td>
-          <td>
-            <table class="detailed">
-              <tr>
-                <td class="detailed">Y3.S2.WE.SE.0101</td>
-              </tr>
-              <tr>
-                <td class="detailed">SE3040 - AF Practical BYOD VL</td>
-              </tr>
-              <tr>
-                <td class="detailed"></td>
+                <td class="detailed">Mr. Samitha Peruma Vidhanaarchchi</td>
               </tr>
               <tr>
                 <td class="detailed">G1105</td>
               </tr>
             </table>
           </td>
+          <td>---</td>
+          <td>---</td>
           <!-- span -->
           <td>---</td>
           <td>
-            SE3010 - SEP&amp;QM Tutorial<br />F1308<br />
+            SE3010 - SEP&amp;QM Tutorial<br />Dr. Dilshan de Silva, VL SE 01<br />F1308<br />
           </td>
         </tr>
         <tr class="foot">
           <td></td>
           <td colspan="7">
-            Timetable generated with FET 6.3.0 on 2/3/23 5:10 PM<br/>
-            Designed by Aruna Priyankara
+            Timetable generated with FET 6.3.0 on 2/16/23 3:43 PM
+          </td>
+        </tr>
+        <tr class="foot">
+          <td></td>
+          <td colspan="7">
+            Designed by
+            <a href="https://arunaap.github.io/">Aruna Priyankara</a>
           </td>
         </tr>
       </tbody>
